lowermem/select + tests

--- a/passes/CMakeLists.txt
+++ b/passes/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required (VERSION 2.6)
-project (passes)
+project (passes CXX)
 
-add_definitions (-std=c++11 -fno-rtti)
+add_definitions (-std=c++11 -fPIC -fno-rtti)
 
-add_library (globalvars SHARED global_vars.cc)
+# all LLVM passes
+add_library (passes SHARED global_vars.cc all_inline.cc lower_mem.cc lower_select.cc)
 
-set_target_properties (globalvars
-  PROPERTIES
-  LINKER_LANGUAGE CXX
-  )
+# clang plug-in
+# or test.cc to z.B. static library passes.a
+add_library (test SHARED test.cc global_vars.cc all_inline.cc lower_mem.cc lower_select.cc)
