--- a/passes/test.sh.in
+++ b/passes/test.sh.in
@@ -34,6 +34,7 @@ mkdir -p "$LOG_PATH"
 #ps=$(find $REF_PATH -maxdepth 1 -type d -exec basename {} \;)
 ps="elim-const-expr
 global-vars
+lowermem
 global-vars -elim-const-expr"
 for opt in $ps; do
 	if [ $opt = "tmp" ]; then
