passes/elliminate_undefined: new pass
this pass  replaces   scalar  UndefValues   by   a  call   to  an
appropriate __VERIFIER_nondet_* function

--- a/passes/CMakeLists.txt
+++ b/passes/CMakeLists.txt
@@ -38,7 +38,7 @@ message(STATUS "Cmake libpath ${CMAKE_LIBRARY_PATH}")
 
 # all LLVM passes
 #add_library (passes SHARED global_vars.cc lower_mem.cc lower_select.cc elim_phi.cc elim_const_expr.cc)
-add_library (passes SHARED global_vars.cc elim_const_expr.cc nestedgep.cc)
+add_library (passes SHARED global_vars.cc elim_const_expr.cc nestedgep.cc elliminate_undefined.cc)
 
 # set the full path of libsl.so/.dylib
 set(LIBPASSES_PATH ${PROJECT_BINARY_DIR}/libpasses${CMAKE_SHARED_LIBRARY_SUFFIX})
