cmake: LLVM 14 requires C as a project language
... due to a bug.

See: llvm/llvm-project#53950
Fixes:
CMake Error at /usr/local/share/cmake-3.22/Modules/Internal/CheckSourceCompiles.cmake:44 (message):
  check_source_compiles: C: needs to be enabled before use.
Call Stack (most recent call first):
  /usr/local/share/cmake-3.22/Modules/CheckCSourceCompiles.cmake:76 (cmake_check_source_compiles)
  /usr/lib/llvm-14/lib/cmake/llvm/FindFFI.cmake:44 (check_c_source_compiles)
  /usr/lib/llvm-14/lib/cmake/llvm/LLVMConfig.cmake:242 (find_package)
  CMakeLists.txt:31 (find_package)

--- a/passes/CMakeLists.txt
+++ b/passes/CMakeLists.txt
@@ -1,5 +1,8 @@
 cmake_minimum_required (VERSION 3.0)
-project (passes CXX)
+
+# FIXME: Unfortunately, C is (at least temporarily) required due to a bug
+# in LLVM 14.  See https://github.com/llvm/llvm-project/issues/53950.
+project (passes LANGUAGES C CXX)
 
 # uncomment this on Darwin if linking the plug-ins fails on undefined references
 if(APPLE)
